fixtures/e2e/todo.txt.d/lists.d/invalid/missing-name.list
---
icon: ❓
description: No `name` frontmatter — frontend should fall back to the filename stem
---
has due

sort by due asc
